@@ -160,13 +160,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
+                <version>3.13.0</version>
+                <configuration>
+                <source>21</source>
+                <target>21</target>
 					<annotationProcessorPaths>
                         <!-- Lombok -->
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.30</version>
+                            <version>1.18.34</version>
                         </path>
                         <!-- Binding -->
                         <path>
@@ -181,9 +184,7 @@
                             <version>1.5.5.Final</version>
                         </path>
 					</annotationProcessorPaths>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                 </configuration>
 			</plugin>
 			<plugin>
